--- a/templates/incident.html
+++ b/templates/incident.html
@@ -197,6 +197,7 @@
             </div>
             <div class="card-body">
                 <p class="mb-1"><strong>Alert ID:</strong> <span id="alert-id-display">{{ id }}</span></p> {# Added id for easier JS access if needed #}
+                <p class="mb-1"><strong>Time :</strong> <span id="alert-id-display">{{ time }}</span></p> {# Added id for easier JS access if needed #}
                 <p class="mb-1"><strong>Details:</strong></p>
                 <!-- Display Area for Original Alert Details -->
                 <div id="alert-details-text" class="original-text-display">
